# TorGames

./: .gitignore  README.md  TorGames.Installer.slnx  TorGames.sln  deploy.sh  test_detail.xml
TorGames.Binder/: TorGames.Binder.vcxproj  provision.md
TorGames.Binder.Stub/: TorGames.Binder.Stub.vcxproj
TorGames.Binder.Stub/compression/: compression.cpp
TorGames.Binder.Stub/crypto/: crypto.cpp  crypto.h
TorGames.Binder.Stub/hash/: hash.cpp  hash.h
TorGames.Binder.Stub/lib/: lz4.c
TorGames.Binder.Stub/res/: resource.h  resource.rc
TorGames.Binder.Stub/src/: Executor.cpp  Executor.h  Extractor.cpp  Extractor.h  common.h  main.cpp  version.h
TorGames.Binder/compression/: compression.h
TorGames.Binder/lib/: lz4.h
TorGames.Binder/res/: manifest.xml  resource.h  resource.rc
TorGames.Binder/src/: main.cpp
TorGames.Binder/test/: hello.cpp
TorGames.Client/: Program.cs  TorGames.Client.csproj  VersionInfo.cs
TorGames.Client/Models/: FileExplorerModels.cs
TorGames.Client/Services/: BufferedLoggerProvider.cs  GrpcClientService.cs  LogBuffer.cs  SystemInfoCollector.cs  UpdateService.cs
TorGames.ClientPlus/: TorGames.ClientPlus.vcxproj
TorGames.ClientPlus.Tests/: TorGames.ClientPlus.Tests.vcxproj
TorGames.ClientPlus.Tests/mocks/: mock_filesystem.h  mock_socket.h
TorGames.ClientPlus.Tests/src/: logger_tests.cpp  test_main.cpp  utils_tests.cpp
TorGames.ClientPlus/src/: client.h  commands.cpp  commands.h  common.h  fileexplorer.cpp  fingerprint.h  logger.h  main.cpp  protocol.h  systeminfo.cpp  systeminfo.h  taskscheduler.cpp  taskscheduler.h  updater.cpp  updater.h
TorGames.Common/: SimpleBackgroundService.cs  TorGames.Common.csproj
TorGames.Database/: TorGames.Database.csproj  TorGamesDbContext.cs
TorGames.Exclusion/: TorGames.Exclusion.cpp  TorGames.Exclusion.vcxproj  TorGames.Exclusion.vcxproj.filters
TorGames.Installer/: Program.cs  TorGames.Installer.csproj  TorGames.Installer.vcxproj
TorGames.Installer.Tests/: TorGames.Installer.Tests.vcxproj
TorGames.InstallerPlus/: BUILD.md  CMakeLists.txt  TorGames.InstallerPlus.vcxproj  main.cpp
TorGames.Server/: Program.cs  TorGames.Server.csproj  appsettings.json
TorGames.Updater/: Program.cs  TorGames.Updater.vcxproj
TorGames.Updater.Tests/: TorGames.Updater.Tests.vcxproj
TorGames.UpdaterOLD/: TorGames.Updater.csproj
docs/: AUTO_UPDATE_DESIGN.md  IMPLEMENTATION_PLAN.md  NETWORKING_OPTIONS.md  PROJECT_STRUCTURE.md
scripts/: get-next-version.ps1
test/: hello.cpp
torgames-app/: .pnp.cjs  Callum Cross.lnk  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
torgames-app/src-tauri/: Cargo.toml  tauri.conf.json
torgames-app/src-tauri/capabilities/: default.json
torgames-app/src-tauri/icons/: icon.icns
torgames-app/src-tauri/src/: main.rs
(+106 files in other folders)
